Ajustando distancia de los pares de tubos

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Project</title>
+    <title>Flappy Eggman</title>
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/flappy.css">
 </head>
 
 <body class="conteudo">
-    <h1>Flappy Project</h1>
+    <h1>Flappy Eggman</h1>
     <div class="flappy"></div>
     <script src="js/flappy.js"></script>
 </body>
